--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,5 @@
 /public/assets
 
 # Ignore master key for decrypting credentials and more.
-/config/master.key
-
+/config/credentials/master.key
 /config/credentials/production.key
